--- a/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -640,7 +640,7 @@ List_lblRemoveFromBasket = Aus Ablage entfernen
 
 List_lblRemoveFromBatch = Aus dem Batchbereich entfernen
 
-List_lblSelectItem = Element ausw\u00E4hlen: 
+List_lblSelectItem = Element ausw\u00E4hlen:
 
 List_lblSortOptions = Sortieren
 
@@ -661,7 +661,7 @@ List_lkNext = N\u00E4chste
 List_lkNone = Keine
 
 #
-# List 
+# List
 #
 List_lkPage = Seite
 
@@ -779,17 +779,17 @@ ViewItemFull_lblCreator = Urheber
 
 ViewItemFull_lblCreators = Urheber
 
-ViewItemFull_lblDateAccepted = Akzeptiert, 
+ViewItemFull_lblDateAccepted = Akzeptiert,
 
-ViewItemFull_lblDateCreated = Erstellt, 
+ViewItemFull_lblDateCreated = Erstellt,
 
-ViewItemFull_lblDateModified = Ge\u00E4ndert, 
+ViewItemFull_lblDateModified = Ge\u00E4ndert,
 
-ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht, 
+ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht,
 
-ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht, 
+ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht,
 
-ViewItemFull_lblDateSubmitted = Eingestellt, 
+ViewItemFull_lblDateSubmitted = Eingestellt,
 
 ViewItemFull_lblDates = Datum
 
@@ -910,7 +910,7 @@ ViewItemFull_lblSubHeaderFile = Dateien
 #
 # ViewItem Full
 #
-ViewItemFull_lblSubHeaderItem = Genre: 
+ViewItemFull_lblSubHeaderItem = Genre:
 
 ViewItemFull_lblSubHeaderLocalTags = lokale Tags
 
@@ -959,7 +959,7 @@ ViewItemLog_lblRelease = Freigegeben am
 
 ViewItemLog_lblSubmit = Eingestellt am
 
-ViewItemLog_lblUpdate = \u00DCberarbeitet am 
+ViewItemLog_lblUpdate = \u00DCberarbeitet am
 
 ViewItemLog_lblWithdraw = Zur\u00FCckgezogen am
 
@@ -1078,7 +1078,7 @@ ViewItemShort_lblDates = Datum
 
 ViewItemShort_lblDetails = Details
 
-ViewItemShort_lblFile = Datei(en) 
+ViewItemShort_lblFile = Datei(en)
 
 ViewItemShort_lblFileAttached = Datei
 
@@ -1165,11 +1165,11 @@ ViewItem_lblEvent1 = Veranstaltung:
 
 ViewItem_lblFile2 = Datei:
 
-ViewItem_lblFileCitation = diese Datei zitieren: 
+ViewItem_lblFileCitation = diese Datei zitieren:
 
-ViewItem_lblFileDescription = Beschreibung: 
+ViewItem_lblFileDescription = Beschreibung:
 
-ViewItem_lblFileVisibility = Zugriffsbeschr\u00E4nkung: 
+ViewItem_lblFileVisibility = Zugriffsbeschr\u00E4nkung:
 
 ViewItem_lblGenre1 = Genre:
 
@@ -1197,17 +1197,17 @@ ViewItem_lblReviewType1 = Art der Begutachtung:
 
 ViewItem_lblSource = Quelle:
 
-ViewItem_lblSourceAlternativeTitle = Alternativer Titel: 
+ViewItem_lblSourceAlternativeTitle = Alternativer Titel:
 
-ViewItem_lblSourceCreator = Urheber: 
+ViewItem_lblSourceCreator = Urheber:
 
 ViewItem_lblSourceEdition = Ausgabe:
 
-ViewItem_lblSourceEndPage = Endseite: 
+ViewItem_lblSourceEndPage = Endseite:
 
 ViewItem_lblSourceIdentifier = Identifier:
 
-ViewItem_lblSourceIssue = Sonderheft: 
+ViewItem_lblSourceIssue = Sonderheft:
 
 ViewItem_lblSourcePlace = Ort:
 
@@ -1215,11 +1215,11 @@ ViewItem_lblSourcePublisher = Verlag:
 
 ViewItem_lblSourceSequenceNo = Sequence Number:
 
-ViewItem_lblSourceStartPage = Startseite: 
+ViewItem_lblSourceStartPage = Startseite:
 
-ViewItem_lblSourceTitle = Titel: 
+ViewItem_lblSourceTitle = Titel:
 
-ViewItem_lblSourceVolume = Band: 
+ViewItem_lblSourceVolume = Band:
 
 ViewItem_lblSourceofSource = Quelle der Quelle
 
@@ -1360,7 +1360,7 @@ adv_search_lblChkType = Art der Datumsangabe
 
 adv_search_lblChkType_accepted = akzeptiert
 
-adv_search_lblChkType_created = erstellt\r\n
+adv_search_lblChkType_created = erstellt
 
 adv_search_lblChkType_modified = modifiziert
 
@@ -1582,13 +1582,13 @@ easy_submission_lblTotalNumberOfPages = Seitenzahl
 
 easy_submission_lblUploadBibtex = BibTeX Datei hochladen
 
-easy_submission_lblUploaded = Hochgeladen: 
+easy_submission_lblUploaded = Hochgeladen:
 
 easy_submission_lblYouCanFetch = Hier k\u00F6nnen Sie Metadaten von externen Services oder \u00FCber eine OU-ID beziehen.
 
 easy_submission_lbleasy_submission_lblFilePath = Pfad
 
-easy_submission_method_fetch_import = ext. MD holen / Referenzen importieren (BibTeX) 
+easy_submission_method_fetch_import = ext. MD holen / Referenzen importieren (BibTeX)
 
 easy_submission_method_manual = Manuelle Eingabe
 
@@ -1606,7 +1606,7 @@ export_btDisplay = Anzeigen
 
 export_btDownload = Runterladen
 
-export_btEMail = E-Mail 
+export_btEMail = E-Mail
 
 export_btExport = Ok
 
@@ -1622,7 +1622,7 @@ export_exportFormats = Exportformate
 
 export_lblExport = Selektierte Datens\u00E4tze exportieren.
 
-export_lblSimpleExport = Export: 
+export_lblSimpleExport = Export:
 
 faq = FAQ
 
@@ -1643,7 +1643,7 @@ info_lblMessageHeader = Systemnachrichten:
 
 informative_message = Informativ:
 
-list_allCheckBox = Auswahloptionen\u0009
+list_allCheckBox = Auswahloptionen
 
 list_ascending = aufsteigend
 
@@ -1663,7 +1663,7 @@ list_latestRelease = Neuester Release
 
 list_locInfo = Referenzinformation
 
-# 
+#
 list_mediumView = mittlere Ansicht
 
 # List
@@ -1682,7 +1682,7 @@ list_title = Titel
 ###login_lblPassword=Passwort
 login_btLogin = Einloggen
 
-login_btLogout = Ausloggen 
+login_btLogout = Ausloggen
 
 mainMenu_lblBrowse = Navigieren
 
@@ -1711,7 +1711,7 @@ mainMenu_lnkPrivacyPolicy = DatenschutzHinweis
 
 mainMenu_lnkPubManHelp = MPG.PuRe Hilfe
 
-mainMenu_lnkQA = QA 
+mainMenu_lnkQA = QA
 
 mainMenu_lnkQAWorkspace = QA Bereich
 
@@ -1744,7 +1744,7 @@ remove = Entfernen
 #
 # Validation report output
 #
-restrictive_message = Restriktiv: 
+restrictive_message = Restriktiv:
 
 save = Speichern
 
@@ -1800,7 +1800,7 @@ submission_descEasySubmission = Hier k\u00F6nnen Sie eine kurze, schrittweise au
 
 submission_descImport = Hier haben Sie die M\u00F6glichkeit, eine BibTeX Referenz hochzuladen oder Metadaten inklusive Volltext(e) von arXiv oder PubMed Central zu importieren.
 
-submission_descNewSubmission = Bei der detaillierten Eingabe stehen Ihnen alle Metadatenfelder, die es in PubMan gibt um einen bibliograpischen Eintrag zu beschreiben, zur Verf\u00FCgung. 
+submission_descNewSubmission = Bei der detaillierten Eingabe stehen Ihnen alle Metadatenfelder, die es in PubMan gibt um einen bibliograpischen Eintrag zu beschreiben, zur Verf\u00FCgung.
 
 submission_lblAuthorCopyPaste = Sie k\u00F6nnen in dieses Feld eine Liste von Autoren einf\u00FCgen bzw. tippen, welche dann unten automatisch erkannt und hinzugef\u00FCgt werden wenn Sie auf "hinzuf\u00FCgen" klicken.
 
