--- a/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -639,7 +639,7 @@ List_lblGoToPage = Go to page
 List_lblGridList = Table View
 
 #
-# List 
+# List
 #
 List_lblPage = Page
 
@@ -647,7 +647,7 @@ List_lblRemoveFromBasket = Remove From Basket
 
 List_lblRemoveFromBatch = Remove From Batch Workspace
 
-List_lblSelectItem = Select Item: 
+List_lblSelectItem = Select Item:
 
 List_lblSortOptions = Sort
 
@@ -663,7 +663,7 @@ List_lkMedView = Medium View (all Items)
 
 List_lkMore = More
 
-List_lkNext = Next 
+List_lkNext = Next
 
 List_lkNone = None
 
@@ -781,17 +781,17 @@ ViewItemFull_lblCreator = Creator
 
 ViewItemFull_lblCreators = Creators
 
-ViewItemFull_lblDateAccepted = Accepted, 
+ViewItemFull_lblDateAccepted = Accepted,
 
-ViewItemFull_lblDateCreated = Created, 
+ViewItemFull_lblDateCreated = Created,
 
-ViewItemFull_lblDateModified = Modified, 
+ViewItemFull_lblDateModified = Modified,
 
-ViewItemFull_lblDatePublishedInPrint = Publ. in Print, 
+ViewItemFull_lblDatePublishedInPrint = Publ. in Print,
 
-ViewItemFull_lblDatePublishedOnline = Published Online, 
+ViewItemFull_lblDatePublishedOnline = Published Online,
 
-ViewItemFull_lblDateSubmitted = Submitted, 
+ViewItemFull_lblDateSubmitted = Submitted,
 
 ViewItemFull_lblDates = Dates
 
@@ -910,7 +910,7 @@ ViewItemFull_lblSubHeaderFile = Files
 #
 # ViewItem Full
 #
-ViewItemFull_lblSubHeaderItem = Genre: 
+ViewItemFull_lblSubHeaderItem = Genre:
 
 ViewItemFull_lblSubHeaderLocalTags = Local Tags
 
@@ -945,7 +945,7 @@ ViewItemFull_lblnameOfCollection = Name of Context
 #
 ViewItemLogPage = Item Log
 
-ViewItemLog_Header = Item Log 
+ViewItemLog_Header = Item Log
 
 ViewItemLog_lblComment = Description:
 
@@ -955,13 +955,13 @@ ViewItemLog_lblInRevision = Sent back for rework on
 
 ViewItemLog_lblItemLog = Item Log for
 
-ViewItemLog_lblRelease = Released on 
+ViewItemLog_lblRelease = Released on
 
-ViewItemLog_lblSubmit = Submitted on 
+ViewItemLog_lblSubmit = Submitted on
 
-ViewItemLog_lblUpdate = Updated on 
+ViewItemLog_lblUpdate = Updated on
 
-ViewItemLog_lblWithdraw = Withdrawn on 
+ViewItemLog_lblWithdraw = Withdrawn on
 
 ViewItemMedium_lblAffiliations = Affiliations
 
@@ -1165,11 +1165,11 @@ ViewItem_lblEvent1 = Event:
 
 ViewItem_lblFile2 = File:
 
-ViewItem_lblFileCitation = Cite this file as: 
+ViewItem_lblFileCitation = Cite this file as:
 
-ViewItem_lblFileDescription = Description: 
+ViewItem_lblFileDescription = Description:
 
-ViewItem_lblFileVisibility = access-level: 
+ViewItem_lblFileVisibility = access-level:
 
 ViewItem_lblGenre1 = Genre:
 
@@ -1197,29 +1197,29 @@ ViewItem_lblReviewType1 = Review type:
 
 ViewItem_lblSource = Source:
 
-ViewItem_lblSourceAlternativeTitle = Alternative Title: 
+ViewItem_lblSourceAlternativeTitle = Alternative Title:
 
-ViewItem_lblSourceCreator = Creator: 
+ViewItem_lblSourceCreator = Creator:
 
 ViewItem_lblSourceEdition = Edition:
 
-ViewItem_lblSourceEndPage = Endpage: 
+ViewItem_lblSourceEndPage = Endpage:
 
-ViewItem_lblSourceIdentifier = Identifier: 
+ViewItem_lblSourceIdentifier = Identifier:
 
-ViewItem_lblSourceIssue = Issue: 
+ViewItem_lblSourceIssue = Issue:
 
 ViewItem_lblSourcePlace = Place:
 
 ViewItem_lblSourcePublisher = Publisher:
 
-ViewItem_lblSourceSequenceNo = Sequence Number: 
+ViewItem_lblSourceSequenceNo = Sequence Number:
 
-ViewItem_lblSourceStartPage = Startpage: 
+ViewItem_lblSourceStartPage = Startpage:
 
-ViewItem_lblSourceTitle = Title: 
+ViewItem_lblSourceTitle = Title:
 
-ViewItem_lblSourceVolume = Volume: 
+ViewItem_lblSourceVolume = Volume:
 
 ViewItem_lblSourceofSource = Source of source
 
@@ -1510,7 +1510,7 @@ easy_submission_lblFileContentCategory = Content Category
 
 easy_submission_lblFileDescription = Description
 
-easy_submission_lblFileFileDescription = File Description: 
+easy_submission_lblFileFileDescription = File Description:
 
 easy_submission_lblFileName = Name:
 
@@ -1522,7 +1522,7 @@ easy_submission_lblFirstName = Given Name
 
 easy_submission_lblFulltext = Fetch full text version
 
-easy_submission_lblFulltext_all = All available 
+easy_submission_lblFulltext_all = All available
 
 easy_submission_lblFulltext_none = None
 
@@ -1585,7 +1585,7 @@ easy_submission_lblTotalNumberOfPages = Total Number of Pages
 
 easy_submission_lblUploadBibtex = Upload BibTeX file
 
-easy_submission_lblUploaded = Uploaded: 
+easy_submission_lblUploaded = Uploaded:
 
 easy_submission_lblYouCanFetch = You can fetch metadata from an external service or via OU ID.
 
@@ -1628,7 +1628,7 @@ export_exportFormats = export formats
 
 export_lblExport = Export selected Items.
 
-export_lblSimpleExport = Export: 
+export_lblSimpleExport = Export:
 
 faq = FAQ
 
@@ -1669,7 +1669,7 @@ list_latestRelease = Latest Release
 
 list_locInfo = Locator Info
 
-# 
+#
 list_mediumView = Medium View
 
 # List
@@ -1688,7 +1688,7 @@ list_title = Title
 ###login_lblPassword=Password
 login_btLogin = Login
 
-login_btLogout = Logout 
+login_btLogout = Logout
 
 mainMenu_lblBrowse = Browse
 
@@ -1750,7 +1750,7 @@ remove = Remove
 #
 # Validation report output
 #
-restrictive_message = Restrictive: 
+restrictive_message = Restrictive:
 
 save = Save
 
@@ -1785,7 +1785,7 @@ search_lblAdvancedSearch_noresults = Advanced Search
 #
 search_lblIncludeFiles = Include files
 
-search_lblSearch = Search released items\u0009
+search_lblSearch = Search released items
 
 search_start = Start search.
 
