--- a/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -637,7 +637,7 @@ List_lblGoToPage = \u30DA\u30FC\u30B8\u306B\u79FB\u52D5
 List_lblGridList = \u8868\u5F62\u5F0F\u3067\u8868\u793A
 
 #
-# List 
+# List
 #
 List_lblPage = \u30DA\u30FC\u30B8
 
@@ -779,17 +779,17 @@ ViewItemFull_lblCreator = \u8457\u8005
 
 ViewItemFull_lblCreators = \u8457\u8005
 
-ViewItemFull_lblDateAccepted = Accepted, 
+ViewItemFull_lblDateAccepted = Accepted,
 
-ViewItemFull_lblDateCreated = Created, 
+ViewItemFull_lblDateCreated = Created,
 
-ViewItemFull_lblDateModified = Modified, 
+ViewItemFull_lblDateModified = Modified,
 
-ViewItemFull_lblDatePublishedInPrint = Publ. in Print, 
+ViewItemFull_lblDatePublishedInPrint = Publ. in Print,
 
-ViewItemFull_lblDatePublishedOnline = Published Online, 
+ViewItemFull_lblDatePublishedOnline = Published Online,
 
-ViewItemFull_lblDateSubmitted = Submitted, 
+ViewItemFull_lblDateSubmitted = Submitted,
 
 ViewItemFull_lblDates = Dates
 
@@ -953,13 +953,13 @@ ViewItemLog_lblCreate = Created on
 
 ViewItemLog_lblItemLog = Item Log for
 
-ViewItemLog_lblRelease = Released on 
+ViewItemLog_lblRelease = Released on
 
-ViewItemLog_lblSubmit = Submitted on 
+ViewItemLog_lblSubmit = Submitted on
 
-ViewItemLog_lblUpdate = Updated on 
+ViewItemLog_lblUpdate = Updated on
 
-ViewItemLog_lblWithdraw = Withdrawn on 
+ViewItemLog_lblWithdraw = Withdrawn on
 
 ViewItemMedium_lblAffiliations = \u6240\u5C5E
 
@@ -1520,7 +1520,7 @@ easy_submission_lblFirstName = \u540D
 
 easy_submission_lblFulltext = \u30D5\u30EB\u30C6\u30AD\u30B9\u30C8\u7248\u3092\u53D6\u5F97
 
-easy_submission_lblFulltext_all = All available 
+easy_submission_lblFulltext_all = All available
 
 easy_submission_lblFulltext_none = \u306A\u3057
 
@@ -1667,7 +1667,7 @@ list_latestRelease = \u6700\u65B0\u306E\u30EA\u30EA\u30FC\u30B9
 
 list_locInfo = Locator Info
 
-# 
+#
 list_mediumView = Medium View
 
 # List
@@ -1783,7 +1783,7 @@ search_lblAdvancedSearch_noresults = \u8A73\u7D30\u691C\u7D22
 #
 search_lblIncludeFiles = \u30D5\u30A1\u30A4\u30EB\u3092\u542B\u3080
 
-search_lblSearch = \u516C\u958B\u4E2D\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u691C\u7D22\u0009
+search_lblSearch = \u516C\u958B\u4E2D\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u691C\u7D22
 
 search_start = \u691C\u7D22\u3092\u958B\u59CB\u3059\u308B
 
