--- a/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -9,7 +9,7 @@ AcceptItem_lblComment = Kommentar zum Freigeben
 
 AdminAdvancedSearchPage = Administrative Suche
 
-AdvancedSearchPage = Detailsuche 
+AdvancedSearchPage = Detailsuche
 
 AdvancedSearchPageOld = Erweiterte Suche
 
@@ -226,9 +226,9 @@ BatchWorkspace_lblActions_changeState_withdraw = Verwerfen
 
 BatchWorkspace_lblActions_changeState_withdrawDesc = Die Datens\u00E4tze werden verworfen sofern ihr aktueller Status dies zul\u00E4sst
 
-BatchWorkspace_lblActions_headline1 = Die gew\u00E4hlte Aktion wird auf alle jeweils im Arbeitsbereich hinterlegten Datens\u00E4tze ausgef\u00FChrt. 
+BatchWorkspace_lblActions_headline1 = Die gew\u00E4hlte Aktion wird auf alle jeweils im Arbeitsbereich hinterlegten Datens\u00E4tze ausgef\u00FChrt.
 
-BatchWorkspace_lblActions_headline2 = Die meisten Aktionen sind mit einem regul\u00E4ren "Speichern" verbunden: Bitte beachten Sie, dass sich der Status der einzelnen Datens\u00E4tze dementsprechend \u00E4ndert. 
+BatchWorkspace_lblActions_headline2 = Die meisten Aktionen sind mit einem regul\u00E4ren "Speichern" verbunden: Bitte beachten Sie, dass sich der Status der einzelnen Datens\u00E4tze dementsprechend \u00E4ndert.
 
 BatchWorkspace_lblNoItemsSet = -
 
@@ -457,30 +457,30 @@ ENUM_GENRE_BOOK_REVIEW = Rezension
 ENUM_GENRE_CASE_NOTE = Entscheidungsanmerkung
 
 # kind of Journal Article, source Journal
-ENUM_GENRE_CASE_STUDY = Fallbesprechung 
+ENUM_GENRE_CASE_STUDY = Fallbesprechung
 
 ENUM_GENRE_COLLECTED_EDITION = Sammelwerk
 
-ENUM_GENRE_COMMENTARY = Kommentar 
+ENUM_GENRE_COMMENTARY = Kommentar
 
 ENUM_GENRE_CONFERENCE_PAPER = Konferenzbeitrag
 
 ENUM_GENRE_CONFERENCE_REPORT = Konferenzbericht
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk 
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar 
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar
 
 # kind of Book, source Encyclopedia
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon 
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift 
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch 
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch
 
 ENUM_GENRE_COURSEWARE_LECTURE = Lehrmaterial
 
@@ -679,7 +679,7 @@ ENUM_OA_STATUS_HYBRID = Hybrid
 
 ENUM_OA_STATUS_MISCELLANEOUS = Sonstiges
 
-ENUM_OA_STATUS_NOT_SPECIFIED = Keine Angabe 
+ENUM_OA_STATUS_NOT_SPECIFIED = Keine Angabe
 
 ENUM_REVIEWMETHOD_INTERNAL = Interne Begutachtung
 
@@ -689,9 +689,9 @@ ENUM_REVIEWMETHOD_PEER = Expertenbegutachtung
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = mit Dateien oder ext. Ref.
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = mit Datei(en) 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = mit Datei(en)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = nur mit Datei(en) 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = nur mit Datei(en)
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = mit ext. Ref.
 
@@ -865,7 +865,7 @@ EditItem_lblItemLatestModification = Zuletzt ge\u00E4ndert am
 
 EditItem_lblItemLatestModifier = Zuletzt ge\u00E4ndert von
 
-EditItem_lblItemVersionID = ID des Datensatzes: 
+EditItem_lblItemVersionID = ID des Datensatzes:
 
 EditItem_lblItemlatestChange = Erstellt am
 
@@ -1092,7 +1092,7 @@ List_lblAddSelectionToBatch = Auswahl der Batchverarbeitung hinzuf\u00FCgen
 
 List_lblAddToBasket = Zur Ablage hinzuf\u00FCgen
 
-List_lblBatchProcessLog = Protokoll 
+List_lblBatchProcessLog = Protokoll
 
 List_lblBibList = Bibliographisch
 
@@ -1118,9 +1118,9 @@ List_lblSortOptions = SORTIERUNG
 
 List_lblViewOptions = ANSICHT
 
-List_lkAll = Alle 
+List_lkAll = Alle
 
-List_lkAllOnPage = Alle auf der Seite 
+List_lkAllOnPage = Alle auf der Seite
 
 List_lkDetails = Details
 
@@ -1136,7 +1136,7 @@ List_lkPrevious = Zur\u00FCck
 
 List_lkShow = Anschauen
 
-List_lkToggleAll = Auswahl umkehren\u0009
+List_lkToggleAll = Auswahl umkehren
 
 List_nextItem = n\u00E4chste Publikation
 
@@ -1154,7 +1154,7 @@ NoSearchResultListPage = keine Treffer
 
 Pubman_browserTitle = MPG.PuRe
 
-Pubman_descriptionMetaTag = MPG.PuRe - das Publikationsrepositorium der Max-Planck-Gesellschaft. 
+Pubman_descriptionMetaTag = MPG.PuRe - das Publikationsrepositorium der Max-Planck-Gesellschaft.
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1272,9 +1272,9 @@ Tools_lblAdminToolText = Verwalten Sie User, Organizational Units (OUs) und Kont
 
 Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = Control of Named Entities (CoNE)
 
-Tools_lblCoNEText = Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
+Tools_lblCoNEText = Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen.
 
 Tools_lblCslEditorInstance = Zitierstil-Editor
 
@@ -1296,7 +1296,7 @@ Tools_lblRESTSearchAndExport = Suchen und Exportieren Seite
 
 Tools_lblRESTSwagger = Swagger \u00DCbersichtsseite
 
-Tools_lblRESTText = M\u00F6chten Sie Ihre PubMan-Daten in einem externen System integrieren? Die notwendigen Abfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
+Tools_lblRESTText = M\u00F6chten Sie Ihre PubMan-Daten in einem externen System integrieren? Die notwendigen Abfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen.
 
 Tools_lblRESTUrlText = PuRe REST URL
 
@@ -1360,17 +1360,17 @@ ViewItemFull_lblCreators = Urheber
 
 ViewItemFull_lblDDCSubject = DDC
 
-ViewItemFull_lblDateAccepted = Angenommen, 
+ViewItemFull_lblDateAccepted = Angenommen,
 
-ViewItemFull_lblDateCreated = Erstellt, 
+ViewItemFull_lblDateCreated = Erstellt,
 
-ViewItemFull_lblDateModified = Ge\u00E4ndert, 
+ViewItemFull_lblDateModified = Ge\u00E4ndert,
 
 ViewItemFull_lblDatePublishedInPrint = Erschienen
 
-ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht, 
+ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht,
 
-ViewItemFull_lblDateSubmitted = Eingereicht, 
+ViewItemFull_lblDateSubmitted = Eingereicht,
 
 ViewItemFull_lblDates = Datum
 
@@ -1488,7 +1488,7 @@ ViewItemFull_lblSSRN = SSRN
 
 ViewItemFull_lblShowGroup = einblenden:
 
-ViewItemFull_lblSocialBookmarkingDescription = MPG.PuRe: 
+ViewItemFull_lblSocialBookmarkingDescription = MPG.PuRe:
 
 ViewItemFull_lblSocialBookmarking_BibSonomy = Diesen Datensatz zu BibSonomy hinzuf\u00FCgen.
 
@@ -1533,7 +1533,7 @@ ViewItemFull_lblSubHeaderFile = Dateien
 #
 # ViewItem Full
 #
-ViewItemFull_lblSubHeaderItem = Genre: 
+ViewItemFull_lblSubHeaderItem = Genre:
 
 ViewItemFull_lblSubHeaderLegalCase = Entscheidung
 
@@ -1594,7 +1594,7 @@ ViewItemLog_lblRelease = Freigegeben am
 
 ViewItemLog_lblSubmit = Eingestellt am
 
-ViewItemLog_lblUpdate = \u00DCberarbeitet am 
+ViewItemLog_lblUpdate = \u00DCberarbeitet am
 
 ViewItemLog_lblWithdraw = Verworfen am
 
@@ -1758,7 +1758,7 @@ ViewItemShort_lblDates = Datum
 
 ViewItemShort_lblDetails = Details
 
-ViewItemShort_lblFile = Dateien 
+ViewItemShort_lblFile = Dateien
 
 ViewItemShort_lblFileAttached = Datei
 
@@ -1828,9 +1828,9 @@ ViewItem_lblEvent1 = Veranstaltung:
 
 ViewItem_lblFile2 = Datei:
 
-ViewItem_lblFileCitation = diese Datei zitieren: 
+ViewItem_lblFileCitation = diese Datei zitieren:
 
-ViewItem_lblFileDescription = Beschreibung: 
+ViewItem_lblFileDescription = Beschreibung:
 
 ViewItem_lblGenre1 = Genre:
 
@@ -1871,29 +1871,29 @@ ViewItem_lblReviewType1 = Art der Begutachtung:
 
 ViewItem_lblSource = Quelle:
 
-ViewItem_lblSourceAlternativeTitle = Alternativer Titel: 
+ViewItem_lblSourceAlternativeTitle = Alternativer Titel:
 
-ViewItem_lblSourceCreator = Urheber: 
+ViewItem_lblSourceCreator = Urheber:
 
 ViewItem_lblSourceEdition = Ausgabe:
 
-ViewItem_lblSourceEndPage = Endseite: 
+ViewItem_lblSourceEndPage = Endseite:
 
-ViewItem_lblSourceIdentifier = Identifikator: 
+ViewItem_lblSourceIdentifier = Identifikator:
 
-ViewItem_lblSourceIssue = Sonderheft: 
+ViewItem_lblSourceIssue = Sonderheft:
 
 ViewItem_lblSourcePlace = Ort:
 
 ViewItem_lblSourcePublisher = Verlag:
 
-ViewItem_lblSourceSequenceNo = Artikelnummer: 
+ViewItem_lblSourceSequenceNo = Artikelnummer:
 
-ViewItem_lblSourceStartPage = Startseite: 
+ViewItem_lblSourceStartPage = Startseite:
 
-ViewItem_lblSourceTitle = Titel: 
+ViewItem_lblSourceTitle = Titel:
 
-ViewItem_lblSourceVolume = Band: 
+ViewItem_lblSourceVolume = Band:
 
 ViewItem_lblSourceofSource = Quelle der Quelle
 
@@ -2127,7 +2127,7 @@ adv_search_lblItemCreatedBy = Erstellt von
 
 adv_search_lblItemCreationDate = Erstellungsdatum Datensatz
 
-adv_search_lblItemLastModificationDate = \u00C4nderungsdatum Datensatz 
+adv_search_lblItemLastModificationDate = \u00C4nderungsdatum Datensatz
 
 adv_search_lblItemModifiedBy = Zuletzt bearbeitet von
 
@@ -2227,7 +2227,7 @@ chooseWorkspace_lnkQAWorkspace = QA Bereich
 
 chooseWorkspace_lnkReportWorkspace = T\u00E4tigkeitsbericht
 
-chooseWorkspace_optMenuBatchWorkspace = BATCHVERARBEITUNG 
+chooseWorkspace_optMenuBatchWorkspace = BATCHVERARBEITUNG
 
 chooseWorkspace_optMenuImportWorkspace = IMPORT BEREICH
 
@@ -2390,13 +2390,13 @@ easy_submission_lblTotalNumberOfPages = Gesamtseitenzahl
 
 easy_submission_lblUploadBibtex = BibTeX Datei hochladen
 
-easy_submission_lblUploaded = Hochgeladen: 
+easy_submission_lblUploaded = Hochgeladen:
 
 easy_submission_lblYouCanFetch = Hier k\u00F6nnen Sie Metadaten von externen Services oder \u00FCber eine OU-ID beziehen.
 
 easy_submission_lbleasy_submission_lblFilePath = Pfad
 
-easy_submission_method_fetch_import = ext. MD holen / lokale Referenzen importieren (BibTeX) 
+easy_submission_method_fetch_import = ext. MD holen / lokale Referenzen importieren (BibTeX)
 
 easy_submission_method_manual = Manuelle Eingabe
 
@@ -2421,7 +2421,7 @@ export_btDisplay = Anzeigen
 
 export_btDownload = Download
 
-export_btEMail = E-Mail 
+export_btEMail = E-Mail
 
 export_btExport = Ok
 
@@ -2432,7 +2432,7 @@ export_btnExport = Ok
 
 export_lblExport = Exportieren
 
-export_lblSimpleExport = Export: 
+export_lblSimpleExport = Export:
 
 faq = FAQ
 
@@ -2597,7 +2597,7 @@ locator_name = Name
 ###login_lblPassword=Passwort
 login_btLogin = Einloggen
 
-login_btLogout = Ausloggen 
+login_btLogout = Ausloggen
 
 mainMenu_lblBrowse = Browse
 
@@ -2721,7 +2721,7 @@ remove = Entfernen
 #
 # Validation report output
 #
-restrictive_message = Restriktiv: 
+restrictive_message = Restriktiv:
 
 save = Speichern
 
