potsdam Sonderlocken stuff III

--- a/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -2866,3 +2866,8 @@ userPW = Passwort
 warning_lblMessageHeader = Systemnachrichten und Warnungen:
 
 yes = Ja
+
+ENUM_IDENTIFIERTYPE_GFZPOF=GFZPOF
+ENUM_IDENTIFIERTYPE_GFZPOFCCA=GFZPOFCCA
+ENUM_IDENTIFIERTYPE_GFZPOFWEITERE=GFZPOFWEITERE
+ENUM_IDENTIFIERTYPE_GFZPROJECT=GFZPROJECT
