--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -2957,3 +2957,8 @@ userPW = Password
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
+
+ENUM_IDENTIFIERTYPE_GFZPOF=GFZPOF
+ENUM_IDENTIFIERTYPE_GFZPOFCCA=GFZPOFCCA
+ENUM_IDENTIFIERTYPE_GFZPOFWEITERE=GFZPOFWEITERE
+ENUM_IDENTIFIERTYPE_GFZPROJECT=GFZPROJECT
