potsdam Sonderlocken stuff IV

--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -606,11 +606,7 @@ ENUM_IDENTIFIERTYPE_MDB_ID = MDB-ID
 #Jus-specific Publication types END
 ENUM_IDENTIFIERTYPE_MEDRXIV = medRxiv
 
-ENUM_IDENTIFIERTYPE_MODELMETHOD = Model / method
-
 ENUM_IDENTIFIERTYPE_OATYPE = OATYPE
-
-ENUM_IDENTIFIERTYPE_ORGANISATIONALK = Organisational keyword
 
 ENUM_IDENTIFIERTYPE_OTHER = Other
 
@@ -633,11 +629,7 @@ ENUM_IDENTIFIERTYPE_PSYARXIV = PsyArXiv
 
 ENUM_IDENTIFIERTYPE_PUBLISHER = Publisher
 
-ENUM_IDENTIFIERTYPE_REGIONALK = Regional keyword
-
 ENUM_IDENTIFIERTYPE_REPORT_NR = Report Nr.
-
-ENUM_IDENTIFIERTYPE_RESEARCHTK = Research topic keyword
 
 #Jus-specific Publication types END
 ENUM_IDENTIFIERTYPE_RESEARCH_SQUARE = Research Square
@@ -650,8 +642,6 @@ ENUM_IDENTIFIERTYPE_SSRN = SSRN
 ENUM_IDENTIFIERTYPE_URI = URI
 
 ENUM_IDENTIFIERTYPE_URN = URN
-
-ENUM_IDENTIFIERTYPE_WORKINGGROUP = Working Group
 
 ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
@@ -2958,7 +2948,22 @@ warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
 
+# GFZ
 ENUM_IDENTIFIERTYPE_GFZPOF=GFZPOF
 ENUM_IDENTIFIERTYPE_GFZPOFCCA=GFZPOFCCA
 ENUM_IDENTIFIERTYPE_GFZPOFWEITERE=GFZPOFWEITERE
 ENUM_IDENTIFIERTYPE_GFZPROJECT=GFZPROJECT
+
+Export_ExportFormat_GFZPUBLISTS = GFZPublists-Citation
+
+# RIFS
+ENUM_IDENTIFIERTYPE_RIFSPROJECT=RIFSPROJECT
+
+# PIK
+ENUM_IDENTIFIERTYPE_MDB-ID=MDB-ID
+ENUM_IDENTIFIERTYPE_MODELMETHOD = Model / method
+ENUM_IDENTIFIERTYPE_ORGANISATIONALK = Organisational keyword
+ENUM_IDENTIFIERTYPE_PIKDOMAIN = PIKDOMAIN
+ENUM_IDENTIFIERTYPE_REGIONALK = Regional keyword
+ENUM_IDENTIFIERTYPE_RESEARCHTK = Research topic keyword
+ENUM_IDENTIFIERTYPE_WORKINGGROUP = Working Group
