New Identifier: SDM, SDM_LIFECYCLE

--- a/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -637,6 +637,10 @@ ENUM_IDENTIFIERTYPE_RESEARCH_SQUARE = Research Square
 #Jus-specific Publication types END
 ENUM_IDENTIFIERTYPE_SOCARXIV = SocArXiv
 
+ENUM_IDENTIFIERTYPE_SDM = SDM
+
+ENUM_IDENTIFIERTYPE_SDM_LIFECYCLE = SDM-LifeCycle
+
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
 ENUM_IDENTIFIERTYPE_URI = URI
