--- a/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -567,6 +567,10 @@ ENUM_IDENTIFIERTYPE_RESEARCHTK = Research topic keyword
 
 ENUM_IDENTIFIERTYPE_RIFSPROJECT = RIFSPROJECT
 
+ENUM_IDENTIFIERTYPE_SDM = SDM
+
+ENUM_IDENTIFIERTYPE_SDM_LIFECYCLE = SDM-LifeCycle
+
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
 ENUM_IDENTIFIERTYPE_URI = URI
