--- a/pubman_presentation/src/main/resources/gfz/Label_de.properties
+++ b/pubman_presentation/src/main/resources/gfz/Label_de.properties
@@ -32,8 +32,7 @@ GFZSendOAMailPage = OpenAccess eMail versenden
 Home_Header_News = Aktuelles von GFZpublic
 
 Pubman_browserTitle = GFZpublic
-
-Pubman_descriptionMetaTag = GFZpublic -  eine GFZ L\u00F6sung f\u00FCr das Publikationsdaten-Management
+Pubman_descriptionMetaTag=GFZpublic - eine GFZ L\u00F6sung f\u00FCr das Publikationsdaten-Management
 
 ViewItemFull_lblSocialBookmarkingDescription = GFZpublic:
 
