--- a/pubman_presentation/src/main/resources/rifs/Label_en.properties
+++ b/pubman_presentation/src/main/resources/rifs/Label_en.properties
@@ -26,12 +26,6 @@
 # Gesellschaft zur F?rderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-ENUM_GENRE_CASE_NOTE = RIFS Blogpost
-
-ENUM_GENRE_COMMENTARY = Data Publication
-
-ENUM_GENRE_FESTSCHRIFT = Software
-
 ENUM_GENRE_NEWSPAPER_ARTICLE = Guest Contribution
 
 Home_Header_News = Latest News on RIFSpublic
@@ -61,3 +55,6 @@ dateOptionAny = Any date
 item_date-issued = Finally published 
 
 openSearch_shortDesc = RIFSpublic
+GFZSendOAMailPage=Send OpenAccess eMail
+oaMail_message=This mail will be sent to the first RIFS-author of the publication. Bitte take in mind that this mail already could have been dropped when the publication has been published.
+oaMail_TextLabel=Email-text
