--- a/pubman_presentation/src/main/resources/pik/Label_de.properties
+++ b/pubman_presentation/src/main/resources/pik/Label_de.properties
@@ -32,8 +32,7 @@ GFZSendOAMailPage = OpenAccess eMail versenden
 Home_Header_News = Aktuelles von PIKpublic
 
 Pubman_browserTitle = PIKpublic
-
-Pubman_descriptionMetaTag = PIKpublic -  eine PIK L\u00F6sung f\u00FCr das Publikationsdaten-Management
+Pubman_descriptionMetaTag=PIKpublic - eine PIK L\u00F6sung f\u00FCr das Publikationsdaten-Management
 
 ViewItemFull_lblSocialBookmarkingDescription = PIKpublic:
 
