--- a/pubman_presentation/src/main/resources/rifs/Label_de.properties
+++ b/pubman_presentation/src/main/resources/rifs/Label_de.properties
@@ -27,19 +27,12 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-ENUM_GENRE_CASE_NOTE = RIFS Blogpost
-
-ENUM_GENRE_COMMENTARY = Datenpublikation
-
-ENUM_GENRE_FESTSCHRIFT = Software
-
 ENUM_GENRE_NEWSPAPER_ARTICLE = Gastbeitrag
 
 Home_Header_News = Aktuelles von RIFSpublic
 
 Pubman_browserTitle = RIFSpublic
-
-Pubman_descriptionMetaTag = RIFSpublic -  eine RIFS L\u00F6sung f\u00FCr das Publikationsdaten-Management
+Pubman_descriptionMetaTag=RIFSpublic - eine RIFS L\u00F6sung f\u00FCr das Publikationsdaten-Management
 
 ViewItemFull_lblSocialBookmarkingDescription = RIFSpublic:
 
@@ -62,3 +55,11 @@ dateOptionAny = Irgendein Jahr
 item_date-issued = Final ver\u00F6ffentlicht
 
 openSearch_shortDesc = RIFSpublic
+
+GFZSendOAMailPage = OpenAccess eMail versenden
+
+oaMail_message=Diese Mail wird an den ersten RIFS-Autor versendet. Bitte beachten Sie, dass diese Mail bereits bei der Freigabe des Datensatzes verschickt worden sein kann.
+
+oaMail_TextLabel = Email-Text
+
+
