--- a/pubman_presentation/src/main/resources/pik/Tooltip_de.properties
+++ b/pubman_presentation/src/main/resources/pik/Tooltip_de.properties
@@ -8,3 +8,4 @@ ViewItem_lblDatePublishedInPrint = Final ver\u00F6ffentlicht
 adv_search_inpStart = Die Datenbank befindet sich noch im Aufbau - Personensuche bitte nur nach Nachnamen.
 
 adv_search_lblChkType_publishedpr = Final ver\u00F6ffentlicht
+ViewItem_imgOa_miscellaneous=Open Access Diamond
