--- a/pubman_presentation/src/main/resources/pik/Tooltip_en.properties
+++ b/pubman_presentation/src/main/resources/pik/Tooltip_en.properties
@@ -8,3 +8,4 @@ ViewItem_lblDatePublishedInPrint = finally published
 adv_search_inpStart = The database is still under construction - please search for persons only by their family name.
 
 adv_search_lblChkType_publishedpr = finally published 
+ViewItem_imgOa_miscellaneous=Open Access Diamond
