--- a/pubman_presentation/src/main/resources/gfz/Label_de.properties
+++ b/pubman_presentation/src/main/resources/gfz/Label_de.properties
@@ -59,3 +59,6 @@ oaMail_TextLabel = Email-Text
 oaMail_message = Diese Mail wird an den ersten GFZ-Autor versendet. Bitte beachten Sie, dass diese Mail bereits bei der Freigabe des Datensatzes verschickt worden sein kann.
 
 openSearch_shortDesc = GFZpublic
+ENUM_OA_STATUS_MISCELLANEOUS=Diamond
+ENUM_CONTENTCATEGORY_code=Software
+ENUM_CONTENTCATEGORY_research-data=Datenpublikationen
