--- a/pubman_presentation/src/main/resources/gfz/Label_en.properties
+++ b/pubman_presentation/src/main/resources/gfz/Label_en.properties
@@ -59,3 +59,6 @@ oaMail_TextLabel = Email-text
 oaMail_message = This mail will be sent to the first GFZ-author of the publication. Bitte take in mind that this mail already could have been dropped when the publication has been published.
 
 openSearch_shortDesc = GFZpublic
+ENUM_OA_STATUS_MISCELLANEOUS=Diamond
+ENUM_CONTENTCATEGORY_code=Software
+ENUM_CONTENTCATEGORY_research-data=Data publications
