--- a/pubman_presentation/src/main/resources/pik/Label_de.properties
+++ b/pubman_presentation/src/main/resources/pik/Label_de.properties
@@ -59,4 +59,4 @@ oaMail_TextLabel = Email-Text
 oaMail_message = Diese Mail wird an den ersten PIK-Autor versendet. Bitte beachten Sie, dass diese Mail bereits bei der Freigabe des Datensatzes verschickt worden sein kann.
 
 openSearch_shortDesc = PIKpublic
-ENUM_OA_STATUS_MISCELLANEOUS=OA Diamond
+ENUM_OA_STATUS_MISCELLANEOUS=Diamond
