--- a/pubman_presentation/src/main/resources/pik/Label_en.properties
+++ b/pubman_presentation/src/main/resources/pik/Label_en.properties
@@ -59,4 +59,4 @@ oaMail_TextLabel = Email-text
 oaMail_message = This mail will be sent to the first PIK-author of the publication. Bitte take in mind that this mail already could have been dropped when the publication has been published.
 
 openSearch_shortDesc = PIKpublic
-ENUM_OA_STATUS_MISCELLANEOUS=OA Diamond
+ENUM_OA_STATUS_MISCELLANEOUS=Diamond
