--- a/pubman_presentation/src/main/resources/rifs/Label_en.properties
+++ b/pubman_presentation/src/main/resources/rifs/Label_en.properties
@@ -58,3 +58,6 @@ openSearch_shortDesc = RIFSpublic
 GFZSendOAMailPage=Send OpenAccess eMail
 oaMail_message=This mail will be sent to the first RIFS-author of the publication. Bitte take in mind that this mail already could have been dropped when the publication has been published.
 oaMail_TextLabel=Email-text
+ENUM_OA_STATUS_MISCELLANEOUS=Diamond
+ENUM_CONTENTCATEGORY_code=Software
+ENUM_CONTENTCATEGORY_research-data=Data publications
