--- a/pubman_presentation/src/main/resources/gfz/Tooltip_en.properties
+++ b/pubman_presentation/src/main/resources/gfz/Tooltip_en.properties
@@ -6,3 +6,4 @@ ViewItemShort_lblDatePublishedInPrint = finally published
 ViewItem_lblDatePublishedInPrint = finally published 
 
 adv_search_lblChkType_publishedpr = finally published 
+ViewItem_imgOa_miscellaneous=Open Access Diamond
