--- a/pubman_presentation/src/main/resources/rifs/Label_de.properties
+++ b/pubman_presentation/src/main/resources/rifs/Label_de.properties
@@ -61,5 +61,8 @@ GFZSendOAMailPage = OpenAccess eMail versenden
 oaMail_message=Diese Mail wird an den ersten RIFS-Autor versendet. Bitte beachten Sie, dass diese Mail bereits bei der Freigabe des Datensatzes verschickt worden sein kann.
 
 oaMail_TextLabel = Email-Text
+ENUM_OA_STATUS_MISCELLANEOUS=Diamond
+ENUM_CONTENTCATEGORY_code=Software
+ENUM_CONTENTCATEGORY_research-data=Datenpublikationen
 
 
