--- a/pubman_presentation/src/main/resources/rifs/Tooltip_de.properties
+++ b/pubman_presentation/src/main/resources/rifs/Tooltip_de.properties
@@ -6,3 +6,4 @@ ViewItemShort_lblDatePublishedInPrint = Final ver\u00F6ffentlicht
 ViewItem_lblDatePublishedInPrint = Final ver\u00F6ffentlicht
 
 adv_search_lblChkType_publishedpr = Final ver\u00F6ffentlicht
+ViewItem_imgOa_miscellaneous=Open Access Diamond
