--- a/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -553,6 +553,8 @@ Export_ExportFormat_APA = APA
 
 Export_ExportFormat_BIBTEX = BibTeX
 
+Export_ExportFormat_OAI_DC = OaiDc
+
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_FileFormat_HTML = HTML
