fix for SourceRequiredValidator

--- a/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman_presentation/src/main/resources/Messages_de.properties
@@ -305,8 +305,7 @@ SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss e
 SourceGenreShouldBeJournal = Das Genre der Quelle sollte "Journal" sein.
 
 SourceGenreShouldBeSeries = Das Genre der Quelle sollte "Reihe" sein.
-
-SourceNotProvided = Wenn das Genre "Zeitschriftenartikel", "Buchkapitel", "Konferenzbeitrag", "Meeting Abstract" oder "Review Article" gew\u00E4hlt ist, muss mindestens eine Quelle angegeben werden.
+SourceNotProvided=Wenn das Genre "Zeitschriften-, Zeitungs- oder Reviewartikel", "Buchkapitel", "Konferenzbeitrag", "Meeting Abstract", oder "Beitrag zu..." gew\u00E4hlt ist, muss mindestens eine Quelle angegeben werden.
 
 SourceTitleNotProvided = Bei den Quellenangaben fehlt der Titel der Quelle.
 
