--- a/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman_presentation/src/main/resources/Messages_en.properties
@@ -307,8 +307,7 @@ SourceGenreNotProvided = If a source title was entered, a source genre has to be
 SourceGenreShouldBeJournal = Source genre should be "Journal".
 
 SourceGenreShouldBeSeries = Source genre should be "Series".
-
-SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter", "Conference Paper", "Meeting Abstract" or "Review Article" at least one source has to be provided.
+SourceNotProvided=If genre is equal to "Journal-, Newspaper- oder Review Article", "Book Chapter", "Conference Paper", "Meeting Abstract" or "Contribution to ..." at least one source has to be provided.
 
 SourceTitleNotProvided = Source information was entered without a source title.
 
